--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	</header>
 		<section id="Home">
 			<div class="intro">
-				<h2> Hello, I'm Vince Raphael V. Musngi </h2>
+				<h2> Hello, I'm Vincex Raphael V. Musngi </h2>
 				<p> Again, I'm Vince Raphael V. Musngi, 13 Years old, Born in November 21, 2011, and I love to play games and eat food </p>
 					<img src="boracay.jpg">
 					<img src="boracay0.jpg">
@@ -406,3 +406,4 @@
     </body>
 
     </html>
+
